--- a/WX/c2/app.json
+++ b/WX/c2/app.json
@@ -3,6 +3,8 @@
     "pages/index/index",
     "pages/zimu/zimu",
     "pages/leftsilderdel/leftsilderdel",
+    "pages/checkbox-radio/checkbox-radio",
+    "pages/swiper-tab/swiper-tab",    
     "pages/search/search"
   ],
   "window":{
