--- a/03/app.json
+++ b/03/app.json
@@ -22,14 +22,14 @@
     "list": [
       {
         "pagePath": "pages/index/index",
-        "iconPath": "static/image/icon/home-b.png",
-        "selectedIconPath": "static/image/icon/home-a.png",
+        "iconPath": "images/icon/a-1.png",
+        "selectedIconPath": "images/icon/a-2.png",
         "text": "收藏"
       },
       {
         "pagePath": "pages/index-fb/index",
-        "iconPath": "static/image/icon/comment-b.png",
-        "selectedIconPath": "static/image/icon/comment-a.png",
+        "iconPath": "images/icon/b-1.png",
+        "selectedIconPath": "images/icon/b-2.png",
         "text": "wechat"
       }
     ]
